--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "^4.18.2",
     "mongoose": "^7.2.2",
     "morgan": "^1.10.0",
-    "mssql": "^9.1.1"
+    "mssql": "^9.1.1",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
