--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.1.4",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "mercadopago": "^1.5.16",
     "mongoose": "^7.2.2",
     "morgan": "^1.10.0",
     "mssql": "^9.1.1",
